# VolumeDataReaderExample

./: .gitignore  CMakeLists.txt
src/: main.cpp
src/volume-data-reader/: CMakeLists.txt  VolumeData.cpp  VolumeData.hpp
